Add new content

--- a/_includes/themes/Carousel/default.html
+++ b/_includes/themes/Carousel/default.html
@@ -307,8 +307,8 @@
           <img src="{{ ASSET_PATH }}/img/examples/slide-01.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>主要经营</h1>
+              <p class="lead">永磁材料,发电机、发电机组,电动车用电动机,家电用电动机,微型电动机,其他电动机</p>
               <a class="btn btn-large btn-primary" href="#">Sign up today</a>
             </div>
           </div>
@@ -317,8 +317,8 @@
           <img src="{{ ASSET_PATH }}/img/examples/slide-02.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>公司简介</h1>
+              <p class="lead">西安祥泰电机技术有限公司简介西安祥泰电机技术有限公司是一个专业从事稀土永磁电机研发、制造和电机专业技术服务的高新技术企业，公司董事长周培堂先生，1987年自西安交通大学电机专业毕业至今20余年，一直在电机业界从事电机方面的各种技术工作，取得众多科研成果；</p>
               <a class="btn btn-large btn-primary" href="#">Learn more</a>
             </div>
           </div>
@@ -327,8 +327,8 @@
           <img src="{{ ASSET_PATH }}/img/examples/slide-03.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>永磁电机</h1>
+              <p class="lead">    在永磁电机设计方面拥有6项技术专利，并在实际中得到良好应用，取得很好效果；公司的无刷直流电机产品已经在各大油田进行了推广使用，尤其是在油田抽油机上的运用，效果极为显著，与原来安装的三相异步电动机相比，综合节电率高达45%，受到油田客户的良好评价；</p>
               <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
             </div>
           </div>
@@ -344,7 +344,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; {{ site.author.name }} {{ site.time | date: '%Y' }} &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy;西安祥泰电机技术有限公司 {{ site.time | date: '%Y' }} &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
