--- a/assets/themes/Carousel/css/bootstrap.css
+++ b/assets/themes/Carousel/css/bootstrap.css
@@ -1,4 +1,4 @@
-/*!
+微软雅黑/*!
  * Bootstrap v2.2.2
  *
  * Copyright 2012 Twitter, Inc
@@ -223,7 +223,7 @@ textarea {
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "微软雅黑", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
