--- a/_includes/themes/Carousel/page.html
+++ b/_includes/themes/Carousel/page.html
@@ -3,25 +3,56 @@
 <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <!-- Three columns of text below the carousel -->
-      <div class="row">
+      <!--<div class="row">
         <div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!-- /.span4 -->
-        <div class="span4">
+        </div>--><!-- /.span4 -->
+        <!--<div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
           <h2>Heading</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!-- /.span4 -->
-        <div class="span4">
+        </div>--><!-- /.span4 -->
+        <!--<div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>--><!-- /.span4 -->
+      <!--</div>--><!-- /.row -->
+
+
+    <!-- Three columns of text below the carousel -->
+      <div class="row">
+{% for post in site.posts %}
+{% if post.category == "motor2.png"%}
+        <div class="span4">
+          <img class="img-circle" data-src="holder.js/140x140">
+          <h2>{{ post.title }}</h2>
+          <p>{{ post.description }}</p>
+          <p><a class="btn" href="{{ BASE_PATH }}{{ post.url }}">查看详情 &raquo;</a></p>
         </div><!-- /.span4 -->
+{% endif %}
+{% if post.category == "dynamic_balancer.png" %}
+        <div class="span4">
+          <img class="img-circle" data-src="holder.js/140x140">
+           <h2>{{ post.title }}</h2>
+          <p>{{ post.description }}</p>
+          <p><a class="btn" href="{{ BASE_PATH }}{{ post.url }}">查看详情 &raquo;</a></p>
+        </div><!-- /.span4 -->
+{% endif %}
+{% if post.category == "permanent_magnet.png" %}
+        <div class="span4">
+          <img class="img-circle" data-src="holder.js/140x140">
+          <h2>{{ post.title }}</h2>
+          <p>{{ post.description }}</p>
+          <p><a class="btn" href="{{ BASE_PATH }}{{ post.url }}">查看详情 &raquo;</a></p>
+        </div><!-- /.span4 -->
+{% endif %}
+{% endfor %}
       </div><!-- /.row -->
 
 
@@ -49,14 +80,12 @@
       <div class="featurette">
         
 
-        <a href="{{ BASE_PATH }}{{ post.url }}"><img class="featurette-image pull-left" src="{{ ASSET_PATH }}Carousel/img/products/browser-icon-firefox.png">
-        <h2 class="featurette-heading">{{ post.title }} </a><span class="muted">{{ post.date | date_to_string }}</span></h2>
+        <a href="{{ BASE_PATH }}{{ post.url }}"><img class="featurette-image pull-left" src="{{ ASSET_PATH }}Carousel/img/products/{{ post.category }}">
+        <h2 class="featurette-heading">{{ post.title }} </a><!--<span class="muted">{{ post.date | date_to_string }}</span></h2>-->
         <p class="lead">{{ post.description }}</p>
       </div>
 
-      <hr class="featurette-divider">
 {% endfor %}
-
 
   <!--
       <div class="featurette">
